Adjusting max width to avoid problems on mobile.

--- a/packages/primeng/src/style/_primeng-dsgov.scss
+++ b/packages/primeng/src/style/_primeng-dsgov.scss
@@ -96,7 +96,7 @@
 
 .p-select-list-container,
 .p-multiselect-list-container {
-    max-width: calc(100vw - 100px);
+    max-width: 100%;
 }
 
 .p-multiselect:not(.p-disabled) {
